--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,13 @@ under the License.
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerReuseStrategy>alwaysNew</compilerReuseStrategy>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
